認証周り調整
