# openapi.yaml
@@ -3,6 +3,11 @@ info:
   description: "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters."
   version: "1.0.0"
   title: backlog api
+security:
+  -
+    bearerAuth: []
+
+
 paths:
   /OAuth2AccessRequest.action :
     get:
@@ -329,3 +334,8 @@ components:
       - mailAddress
       title: The root schema
       type: object
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
